[package]
name = "users"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
axum = { version = "0.7.4", features = ["macros"] }
serde_json = "1.0.107"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
] }
sqlx-core = "0.7.3"
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
axum-extra = "0.9.2"
thiserror = "1.0.56"
validator = { version = "0.16.1", features = ["derive"] }
nanoid = "0.4.0"
argon2 = "0.5.3"
jsonwebtoken = "9"
utoipa = "4.2.0"
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
reqwest = "0.11.24"
futures = "0.3.30"
